Snapshot import from 2026-07-29T05:04:23Z